# spovm4_slm

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: errors.h  help.h
include/daemon/: logger.h
include/logging/: logging.h
include/modules/: filesystem.h
include/monitors/: dbus_monitor.h  inotify_monitor.h  monitor.h  udev_monitor.h
src/: help.c  logging.c  main.c
src/daemon/: main.c  slmd.service
src/modules/: filesystem.c
src/monitors/: dbus_monitor.c  inotify_monitor.c  monitor.c  udev_monitor.c
src/utility/: main.c
